Simple API implementation
works for a simple poc, not happy with most of the interfaces
