# api/errors.go
@@ -1,0 +1,44 @@
+package api
+
+import "vdb/pkg/datastore"
+
+func RenderErrUnknownType(e datastore.ErrUnknownType) ErrNotFound {
+	t := "type"
+	v := string(e.Type)
+
+	return ErrNotFound{
+		Message: e.Error(),
+		Type:    &t,
+		Value:   &v,
+	}
+}
+
+func RenderErrIdNotFound(e datastore.ErrIdNotFound) ErrNotFound {
+	t := string(e.Type)
+	v := string(e.Id)
+
+	return ErrNotFound{
+		Message: e.Error(),
+		Type:    &t,
+		Value:   &v,
+	}
+}
+
+func RenderRevisionIdNotFound(e datastore.ErrRevisionNotFound) ErrNotFound {
+	t := string(e.Type)
+	v := string(e.Id)
+	r := RevisionId(e.RevisionID)
+
+	return ErrNotFound{
+		Message:  e.Error(),
+		Type:     &t,
+		Value:    &v,
+		Revision: &r,
+	}
+}
+
+func RenderServerError(err error) ErrServerError {
+	return ErrServerError{
+		Message: err.Error(),
+	}
+}
