# pkg/common/types.go
@@ -1,0 +1,11 @@
+package common
+
+type TypeID string
+type TypeName string
+
+type RevisionID uint64
+
+type VersionID uint
+type Value any
+
+type ValidatorName string
